==> BossHobby/QUICKSILVER/Silverware/src/drv_dshot_dma_F4.c <==
#include "project.h"
#include "defines.h"
#include "drv_pwm.h"
#include "drv_time.h"
#include "util.h"
#include "drv_dshot.h"
#define DSHOT600
#define DIGITAL_IDLE 4
	#define DSHOT_BIT_TIME 		((PWM_CLOCK_FREQ_HZ/1000/150)-1)
	#define DSHOT_T0H_TIME 		(DSHOT_BIT_TIME*0.30 + 0.05 )
  #define DSHOT_T1H_TIME 		(DSHOT_BIT_TIME*0.60 + 0.05 )
	#define DSHOT_BIT_TIME 		((PWM_CLOCK_FREQ_HZ/1000/300)-1)
	#define DSHOT_T0H_TIME 		(DSHOT_BIT_TIME*0.30 + 0.05 )
  #define DSHOT_T1H_TIME 		(DSHOT_BIT_TIME*0.60 + 0.05 )
	#define DSHOT_BIT_TIME 		((PWM_CLOCK_FREQ_HZ/1000/600)-1)  // clock cycles per bit for a bit timing period of 1.67us
	#define DSHOT_T0H_TIME 		(DSHOT_BIT_TIME*0.30 + 0.05 )
  #define DSHOT_T1H_TIME 		(DSHOT_BIT_TIME*0.60 + 0.05 )
#define DSHOT_PORT_COUNT (DSHOT_GPIO_A + DSHOT_GPIO_B + DSHOT_GPIO_C)
#define FORWARD 0
#define REVERSE 1

void pwm_init()
{
 GPIO_InitTypeDef  GPIO_InitStructure;

  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
  GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;

	GPIO_InitStructure.GPIO_Pin = DSHOT_PIN_0 ;
	GPIO_Init( DSHOT_PORT_0, &GPIO_InitStructure );

	GPIO_InitStructure.GPIO_Pin = DSHOT_PIN_1 ;
	GPIO_Init( DSHOT_PORT_1, &GPIO_InitStructure );

	GPIO_InitStructure.GPIO_Pin = DSHOT_PIN_2 ;
	GPIO_Init( DSHOT_PORT_2, &GPIO_InitStructure );

	GPIO_InitStructure.GPIO_Pin = DSHOT_PIN_3 ;
	GPIO_Init( DSHOT_PORT_3, &GPIO_InitStructure );


	if		 ( DSHOT_PORT_0 == GPIOA )			*dshot_portA |= DSHOT_PIN_0;
	else if( DSHOT_PORT_0 == GPIOB )			*dshot_portB |= DSHOT_PIN_0;
	else if( DSHOT_PORT_0 == GPIOC )			*dshot_portC |= DSHOT_PIN_0;
	if		 ( DSHOT_PORT_1 == GPIOA )			*dshot_portA |= DSHOT_PIN_1;
	else if( DSHOT_PORT_1 == GPIOB )			*dshot_portB |= DSHOT_PIN_1;
	else if( DSHOT_PORT_1 == GPIOC )			*dshot_portC |= DSHOT_PIN_1;
	if		 ( DSHOT_PORT_2 == GPIOA )			*dshot_portA |= DSHOT_PIN_2;
	else if( DSHOT_PORT_2 == GPIOB )			*dshot_portB |= DSHOT_PIN_2;
	else if( DSHOT_PORT_2 == GPIOC )			*dshot_portC |= DSHOT_PIN_2;
	if		 ( DSHOT_PORT_3 == GPIOA )			*dshot_portA |= DSHOT_PIN_3;
	else if( DSHOT_PORT_3 == GPIOB )			*dshot_portB |= DSHOT_PIN_3;
	else if( DSHOT_PORT_3 == GPIOC )			*dshot_portC |= DSHOT_PIN_3;

// DShot timer/DMA2 init
	// TIM1_UP  DMA2_STREAM_5/CH6: set all output to HIGH		at TIM1 update
	// TIM1_CH1 DMA2_STREAM_1/CH6: reset output if data=0		at T0H timing
	// TIM1_CH4 DMA2_STREAM_4/CH6: reset all output					at T1H timing

	TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
	TIM_OCInitTypeDef TIM_OCInitStructure;

	TIM_TimeBaseStructInit(&TIM_TimeBaseStructure);
  TIM_OCStructInit(&TIM_OCInitStructure);
	// TIM1 Periph clock enable
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_TIM1, ENABLE);

	/* Time base configuration */
	TIM_TimeBaseStructure.TIM_Period = 						DSHOT_BIT_TIME;
	TIM_TimeBaseStructure.TIM_Prescaler = 				0;
	TIM_TimeBaseStructure.TIM_ClockDivision = 		0;
	TIM_TimeBaseStructure.TIM_CounterMode = 			TIM_CounterMode_Up;
	TIM_TimeBaseInit(TIM1, &TIM_TimeBaseStructure);
	TIM_ARRPreloadConfig(TIM1, DISABLE);

	/* Timing Mode configuration: Channel 1 */
	TIM_OCInitStructure.TIM_OCMode = 							TIM_OCMode_Timing;
	TIM_OCInitStructure.TIM_OutputState = 				TIM_OutputState_Disable;
	TIM_OCInitStructure.TIM_Pulse = 							DSHOT_T0H_TIME;
	TIM_OC1Init(TIM1, &TIM_OCInitStructure);
	TIM_OC1PreloadConfig(TIM1, TIM_OCPreload_Disable);

	/* Timing Mode configuration: Channel 4 */
	TIM_OCInitStructure.TIM_OCMode = 							TIM_OCMode_Timing;
	TIM_OCInitStructure.TIM_OutputState = 				TIM_OutputState_Disable;
	TIM_OCInitStructure.TIM_Pulse = 							DSHOT_T1H_TIME;
	TIM_OC4Init(TIM1, &TIM_OCInitStructure);
	TIM_OC4PreloadConfig(TIM1, TIM_OCPreload_Disable);

	DMA_InitTypeDef DMA_InitStructure;

	DMA_StructInit(&DMA_InitStructure);
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_DMA2, ENABLE);

	/* DMA2 Stream5_Channel6 configuration ----------------------------------------------*/
	DMA_DeInit(DMA2_Stream5);
	DMA_InitStructure.DMA_Channel =								DMA_Channel_6;
	DMA_InitStructure.DMA_PeripheralBaseAddr = 		(uint32_t)&GPIOA->BSRRL;
	DMA_InitStructure.DMA_Memory0BaseAddr = 			(uint32_t)dshot_portA;
	DMA_InitStructure.DMA_DIR = 									DMA_DIR_MemoryToPeripheral;
	DMA_InitStructure.DMA_BufferSize = 						16;
	DMA_InitStructure.DMA_PeripheralInc = 				DMA_PeripheralInc_Disable;
	DMA_InitStructure.DMA_MemoryInc = 						DMA_MemoryInc_Disable;
	DMA_InitStructure.DMA_PeripheralDataSize = 		DMA_PeripheralDataSize_HalfWord;
	DMA_InitStructure.DMA_MemoryDataSize = 				DMA_MemoryDataSize_HalfWord;
	DMA_InitStructure.DMA_Mode = 									DMA_Mode_Normal;
	DMA_InitStructure.DMA_Priority = 							DMA_Priority_High;
	DMA_InitStructure.DMA_FIFOMode = 							DMA_FIFOMode_Disable;
	DMA_InitStructure.DMA_MemoryBurst = 					DMA_MemoryBurst_Single;
	DMA_InitStructure.DMA_PeripheralBurst = 			DMA_PeripheralBurst_Single;
	DMA_Init(DMA2_Stream5, &DMA_InitStructure);

	/* DMA2	Stream1_Channel6 configuration ----------------------------------------------*/	
	DMA_DeInit(DMA2_Stream1);
	DMA_InitStructure.DMA_Channel =								DMA_Channel_6;
	DMA_InitStructure.DMA_PeripheralBaseAddr = 		(uint32_t)&GPIOA->BSRRH;
	DMA_InitStructure.DMA_Memory0BaseAddr = 			(uint32_t)motor_data_portA;
	DMA_InitStructure.DMA_DIR = 									DMA_DIR_MemoryToPeripheral;
	DMA_InitStructure.DMA_BufferSize = 						16;
	DMA_InitStructure.DMA_PeripheralInc = 				DMA_PeripheralInc_Disable;
	DMA_InitStructure.DMA_MemoryInc = 						DMA_MemoryInc_Enable;
	DMA_InitStructure.DMA_PeripheralDataSize = 		DMA_PeripheralDataSize_HalfWord;
	DMA_InitStructure.DMA_MemoryDataSize = 				DMA_MemoryDataSize_HalfWord;
	DMA_InitStructure.DMA_Mode = 									DMA_Mode_Normal;
	DMA_InitStructure.DMA_Priority = 							DMA_Priority_High;
	DMA_InitStructure.DMA_FIFOMode = 							DMA_FIFOMode_Disable;
	DMA_InitStructure.DMA_MemoryBurst = 					DMA_MemoryBurst_Single;
	DMA_InitStructure.DMA_PeripheralBurst = 			DMA_PeripheralBurst_Single;
	DMA_Init(DMA2_Stream1, &DMA_InitStructure);	

	/* DMA2 Stream4_Channel6 configuration ----------------------------------------------*/
	DMA_DeInit(DMA2_Stream4);
	DMA_InitStructure.DMA_Channel =								DMA_Channel_6;
	DMA_InitStructure.DMA_PeripheralBaseAddr = 		(uint32_t)&GPIOA->BSRRH;
	DMA_InitStructure.DMA_Memory0BaseAddr = 			(uint32_t)dshot_portA;
	DMA_InitStructure.DMA_DIR = 									DMA_DIR_MemoryToPeripheral;
	DMA_InitStructure.DMA_BufferSize = 						16;
	DMA_InitStructure.DMA_PeripheralInc = 				DMA_PeripheralInc_Disable;
	DMA_InitStructure.DMA_MemoryInc = 						DMA_MemoryInc_Disable;
	DMA_InitStructure.DMA_PeripheralDataSize = 		DMA_PeripheralDataSize_HalfWord;
	DMA_InitStructure.DMA_MemoryDataSize = 				DMA_MemoryDataSize_HalfWord;
	DMA_InitStructure.DMA_Mode = 									DMA_Mode_Normal;
	DMA_InitStructure.DMA_Priority = 							DMA_Priority_High;
	DMA_InitStructure.DMA_FIFOMode = 							DMA_FIFOMode_Disable;
	DMA_InitStructure.DMA_MemoryBurst = 					DMA_MemoryBurst_Single;
	DMA_InitStructure.DMA_PeripheralBurst = 			DMA_PeripheralBurst_Single;
	DMA_Init(DMA2_Stream4, &DMA_InitStructure);

	TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, ENABLE);

	NVIC_InitTypeDef NVIC_InitStructure;
	/* configure DMA1 Channel4 interrupt */
	NVIC_InitStructure.NVIC_IRQChannel = 					DMA2_Stream4_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelCmd = 			ENABLE;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x00;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x00;
	NVIC_Init(&NVIC_InitStructure);
	/* enable DMA2 Stream6 transfer complete interrupt */
	DMA_ITConfig(DMA2_Stream4, DMA_IT_TC, ENABLE);

	// set failsafetime so signal is off at start
	pwm_failsafe_time = gettime() - 100000;
	pwmdir = FORWARD;
}

void dshot_dma_portA()
{
	DMA2_Stream5->PAR = (uint32_t)&GPIOA->BSRRL;
	DMA2_Stream5->M0AR = (uint32_t)dshot_portA;
	DMA2_Stream1->PAR = (uint32_t)&GPIOA->BSRRH;
	DMA2_Stream1->M0AR = (uint32_t)motor_data_portA;
	DMA2_Stream4->PAR = (uint32_t)&GPIOA->BSRRH;
	DMA2_Stream4->M0AR = (uint32_t)dshot_portA;

	DMA_ClearFlag(DMA2_Stream1, DMA_FLAG_TCIF1 | DMA_FLAG_HTIF1 | DMA_FLAG_TEIF1);
	DMA_ClearFlag(DMA2_Stream4, DMA_FLAG_TCIF4 | DMA_FLAG_HTIF4 | DMA_FLAG_TEIF4);
	DMA_ClearFlag(DMA2_Stream5, DMA_FLAG_TCIF5 | DMA_FLAG_HTIF5 | DMA_FLAG_TEIF5);

	DMA2_Stream5->NDTR = 16;
	DMA2_Stream1->NDTR = 16;
	DMA2_Stream4->NDTR = 16;

	TIM1->SR = 0;

	DMA_Cmd(DMA2_Stream1, ENABLE);
	DMA_Cmd(DMA2_Stream4, ENABLE);
	DMA_Cmd(DMA2_Stream5, ENABLE);

	TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, ENABLE);

	TIM_SetCounter( TIM1, DSHOT_BIT_TIME );
	TIM_Cmd( TIM1, ENABLE );
}

void dshot_dma_portB()
{
	DMA2_Stream5->PAR = (uint32_t)&GPIOB->BSRRL;
	DMA2_Stream5->M0AR = (uint32_t)dshot_portB;
	DMA2_Stream1->PAR = (uint32_t)&GPIOB->BSRRH;
	DMA2_Stream1->M0AR = (uint32_t)motor_data_portB;
	DMA2_Stream4->PAR = (uint32_t)&GPIOB->BSRRH;
	DMA2_Stream4->M0AR = (uint32_t)dshot_portB;

	DMA_ClearFlag(DMA2_Stream1, DMA_FLAG_TCIF1 | DMA_FLAG_HTIF1 | DMA_FLAG_TEIF1);
	DMA_ClearFlag(DMA2_Stream4, DMA_FLAG_TCIF4 | DMA_FLAG_HTIF4 | DMA_FLAG_TEIF4);
	DMA_ClearFlag(DMA2_Stream5, DMA_FLAG_TCIF5 | DMA_FLAG_HTIF5 | DMA_FLAG_TEIF5);

	DMA2_Stream5->NDTR = 16;
	DMA2_Stream1->NDTR = 16;
	DMA2_Stream4->NDTR = 16;

	TIM1->SR = 0;

	DMA_Cmd(DMA2_Stream1, ENABLE);
	DMA_Cmd(DMA2_Stream4, ENABLE);
	DMA_Cmd(DMA2_Stream5, ENABLE);

	TIM_DMACmd(TIM1, TIM_DMA_Update | TIM_DMA_CC4 | TIM_DMA_CC1, ENABLE);

	TIM_SetCounter( TIM1, DSHOT_BIT_TIME );
	TIM_Cmd( TIM1, ENABLE );
}

void dshot_dma_start()
{
	uint32_t	time=gettime();
	while( dshot_dma_phase != 0 && (gettime()-time) < LOOPTIME ) { } 	// wait maximum a LOOPTIME for dshot dma to complete
	if( dshot_dma_phase != 0 ) return;																// skip this dshot command

		// generate dshot dma packet
	for ( uint8_t i = 0; i < 16; i++ ) {
		motor_data_portA[ i ] = 0;
		motor_data_portB[ i ] = 0;
		motor_data_portC[ i ] = 0;
		

	  if ( !( dshot_packet[0] & 0x8000 ) ) {
			if			( DSHOT_PORT_0 == GPIOA )	motor_data_portA[ i ] |= DSHOT_PIN_0;
			else if ( DSHOT_PORT_0 == GPIOB )	motor_data_portB[ i ] |= DSHOT_PIN_0;
			else if	( DSHOT_PORT_0 == GPIOC )	motor_data_portC[ i ] |= DSHOT_PIN_0;	}
	  if ( !( dshot_packet[1] & 0x8000 ) ) {
			if			( DSHOT_PORT_1 == GPIOA )	motor_data_portA[ i ] |= DSHOT_PIN_1;
			else if ( DSHOT_PORT_1 == GPIOB )	motor_data_portB[ i ] |= DSHOT_PIN_1;
			else if ( DSHOT_PORT_1 == GPIOC )	motor_data_portC[ i ] |= DSHOT_PIN_1;	}
	  if ( !( dshot_packet[2] & 0x8000 ) ) {
			if			( DSHOT_PORT_2 == GPIOA )	motor_data_portA[ i ] |= DSHOT_PIN_2;
			else if ( DSHOT_PORT_2 == GPIOB )	motor_data_portB[ i ] |= DSHOT_PIN_2;
			else if ( DSHOT_PORT_2 == GPIOC )	motor_data_portC[ i ] |= DSHOT_PIN_2;	}
	  if ( !( dshot_packet[3] & 0x8000 ) ) {
			if			( DSHOT_PORT_3 == GPIOA )	motor_data_portA[ i ] |= DSHOT_PIN_3;
			else if ( DSHOT_PORT_3 == GPIOB ) motor_data_portB[ i ] |= DSHOT_PIN_3;
			else if ( DSHOT_PORT_3 == GPIOC ) motor_data_portC[ i ] |= DSHOT_PIN_3;	}

	  dshot_packet[0] <<= 1;
	  dshot_packet[1] <<= 1;
	  dshot_packet[2] <<= 1;
	  dshot_packet[3] <<= 1;
	}

	dshot_dma_phase = DSHOT_PORT_COUNT;

	TIM1->ARR 	= DSHOT_BIT_TIME;
	TIM1->CCR1 	= DSHOT_T0H_TIME;
	TIM1->CCR4 	= DSHOT_T1H_TIME;

	DMA2_Stream1->CR |= DMA_MemoryDataSize_HalfWord|DMA_PeripheralDataSize_HalfWord;	// switch from byte to halfword

	if 			(DSHOT_GPIO_A == 1) dshot_dma_portA();
	else if	(DSHOT_GPIO_B == 1) dshot_dma_portB();
	else if	(DSHOT_GPIO_C == 1) dshot_dma_portC(); 
}
