==> markusgritsch/SilF4ware/Core/Src/drv_dshot_dma.c <==
#define BIDIRECTIONAL
#define IDLE_OFFSET 30 // 4S
#define DSHOT 600 // BLHeli_S BB2 (not supported by BB1)
#include <stdbool.h>
#include "defines.h"
#include "drv_dshot.h"
#include "drv_time.h"
#include "hardware.h"
#include "main.h"
#define DSHOT_BIT_TIME 	( ( SYS_CLOCK_FREQ_MHZ * 1000 / DSHOT ) - 1 )
#define DSHOT_T0H_TIME ( DSHOT_BIT_TIME * 0.30 )
#define DSHOT_T1H_TIME ( DSHOT_BIT_TIME * 0.60 )

void pwm_init()
{
	extern void MX_TIM1_Init( void );
	MX_TIM1_Init();

	TIM1->ARR = DSHOT_BIT_TIME;
	TIM1->CCR1 = DSHOT_T0H_TIME;
	TIM1->CCR2 = DSHOT_T1H_TIME;

	if ( ESC1_GPIO_Port == GPIOA ) {
		*dshot_portA |= ESC1_Pin;
	} else{
		*dshot_portB |= ESC1_Pin;
	}
	if ( ESC2_GPIO_Port == GPIOA ) {
		*dshot_portA |= ESC2_Pin;
	} else{
		*dshot_portB |= ESC2_Pin;
	}
	if ( ESC3_GPIO_Port == GPIOA ) {
		*dshot_portA |= ESC3_Pin;
	} else{
		*dshot_portB |= ESC3_Pin;
	}
	if ( ESC4_GPIO_Port == GPIOA ) {
		*dshot_portA |= ESC4_Pin;
	} else{
		*dshot_portB |= ESC4_Pin;
	}

	*dshot_portA_off = ( *dshot_portA ) << 16;
	*dshot_portB_off = ( *dshot_portB ) << 16;
}

static void dshot_dma_portA()
{
	extern TIM_HandleTypeDef htim1;
	extern DMA_HandleTypeDef hdma_tim1_up;
	extern DMA_HandleTypeDef hdma_tim1_ch1;
	extern DMA_HandleTypeDef hdma_tim1_ch2;

	HAL_TIM_Base_Stop( &htim1 );

	__HAL_TIM_DISABLE_DMA( &htim1, TIM_DMA_UPDATE );
	__HAL_TIM_DISABLE_DMA( &htim1, TIM_DMA_CC1 );
	__HAL_TIM_DISABLE_DMA( &htim1, TIM_DMA_CC2 );

	// This resets the hdma->State = HAL_DMA_STATE_READY; otherwise, no new transfer is started.
	HAL_DMA_Abort( &hdma_tim1_up );
	HAL_DMA_Abort( &hdma_tim1_ch1 );
	HAL_DMA_Abort( &hdma_tim1_ch2 );

	__HAL_TIM_ENABLE_DMA( &htim1, TIM_DMA_UPDATE );
	__HAL_TIM_ENABLE_DMA( &htim1, TIM_DMA_CC1 );
	__HAL_TIM_ENABLE_DMA( &htim1, TIM_DMA_CC2 );

	__HAL_DMA_ENABLE_IT( &hdma_tim1_ch2, DMA_IT_TC );

	HAL_DMA_Start( &hdma_tim1_up, (uint32_t)dshot_portA, (uint32_t)&GPIOA->BSRR, 16 );
	HAL_DMA_Start( &hdma_tim1_ch1, (uint32_t)motor_data_portA, (uint32_t)&GPIOA->BSRR, 16 );
	HAL_DMA_Start( &hdma_tim1_ch2, (uint32_t)dshot_portA_off, (uint32_t)&GPIOA->BSRR, 16 );

	__HAL_TIM_SetCounter( &htim1, DSHOT_BIT_TIME );
	HAL_TIM_Base_Start( &htim1 );
}

static void dshot_dma_portB()
{
	extern TIM_HandleTypeDef htim1;
	extern DMA_HandleTypeDef hdma_tim1_up;
	extern DMA_HandleTypeDef hdma_tim1_ch1;
	extern DMA_HandleTypeDef hdma_tim1_ch2;

	HAL_TIM_Base_Stop( &htim1 );

	__HAL_TIM_DISABLE_DMA( &htim1, TIM_DMA_UPDATE );
	__HAL_TIM_DISABLE_DMA( &htim1, TIM_DMA_CC1 );
	__HAL_TIM_DISABLE_DMA( &htim1, TIM_DMA_CC2 );

	// This resets the hdma->State = HAL_DMA_STATE_READY; otherwise, no new transfer is started.
	HAL_DMA_Abort( &hdma_tim1_up );
	HAL_DMA_Abort( &hdma_tim1_ch1 );
	HAL_DMA_Abort( &hdma_tim1_ch2 );

	__HAL_TIM_ENABLE_DMA( &htim1, TIM_DMA_UPDATE );
	__HAL_TIM_ENABLE_DMA( &htim1, TIM_DMA_CC1 );
	__HAL_TIM_ENABLE_DMA( &htim1, TIM_DMA_CC2 );

	__HAL_DMA_ENABLE_IT( &hdma_tim1_ch2, DMA_IT_TC );

	HAL_DMA_Start( &hdma_tim1_up, (uint32_t)dshot_portB, (uint32_t)&GPIOB->BSRR, 16 );
	HAL_DMA_Start( &hdma_tim1_ch1, (uint32_t)motor_data_portB, (uint32_t)&GPIOB->BSRR, 16 );
	HAL_DMA_Start( &hdma_tim1_ch2, (uint32_t)dshot_portB_off, (uint32_t)&GPIOB->BSRR, 16 );

	__HAL_TIM_SetCounter( &htim1, DSHOT_BIT_TIME );
	HAL_TIM_Base_Start( &htim1 );
}

static void dshot_dma_start()
{
	// generate dshot dma packet
	for ( uint8_t i = 0; i < 16; ++i ) {
		motor_data_portA[ i ] = 0;
		motor_data_portB[ i ] = 0;

		if ( ! ( dshot_packet[0] & 0x8000 ) ) {
			if ( ESC1_GPIO_Port == GPIOA ) {
				motor_data_portA[ i ] |= ESC1_Pin << 16;
			} else {
				motor_data_portB[ i ] |= ESC1_Pin << 16;
			}
		}
		if ( ! ( dshot_packet[1] & 0x8000 ) ) {
			if ( ESC2_GPIO_Port == GPIOA ) {
				motor_data_portA[ i ] |= ESC2_Pin << 16;
			} else {
				motor_data_portB[ i ] |= ESC2_Pin << 16;
			}
		}
		if ( ! ( dshot_packet[2] & 0x8000 ) ) {
			if ( ESC3_GPIO_Port == GPIOA ) {
				motor_data_portA[ i ] |= ESC3_Pin << 16;
			} else {
				motor_data_portB[ i ] |= ESC3_Pin << 16;
			}
		}
		if ( ! ( dshot_packet[3] & 0x8000 ) ) {
			if ( ESC4_GPIO_Port == GPIOA ) {
				motor_data_portA[ i ] |= ESC4_Pin << 16;
			} else {
				motor_data_portB[ i ] |= ESC4_Pin << 16;
			}
		}

		dshot_packet[ 0 ] <<= 1;
		dshot_packet[ 1 ] <<= 1;
		dshot_packet[ 2 ] <<= 1;
		dshot_packet[ 3 ] <<= 1;
	}

	if ( ESC1_GPIO_Port == GPIOB || ESC2_GPIO_Port == GPIOB || ESC3_GPIO_Port == GPIOB || ESC4_GPIO_Port == GPIOB ) {
		dshot_dma_phase = 2;
	} else {
		dshot_dma_phase = 1;
	}

	dshot_dma_portA();
}
